--- a/config.toml
+++ b/config.toml
@@ -10,14 +10,13 @@ theme = "pagedjs"
   [markup.highlight]
     codeFences = true
     guessSyntax = false
-    hl_Lines = ""
     lineNoStart = 1
     # lineNos = true
     lineNumbersInTable = false
     noClasses = true
-    style = "pastie"
+    style = "perldoc"
     tabWidth = 4
-
+    pygmentsUseClasses=true
 
 [taxonomies]
   # category = "categories"
@@ -50,14 +49,3 @@ theme = "pagedjs"
     url = "/cookbook/"
     weight= 3
 
-  # [[menu.main]]
-  #   identifier = "codeofconduct"
-  #   name = "Code of Conduct"
-  #   url = "/code-of-conduct.html"
-  #   weight= 3
-
-  [[menu.main]]
-    identifier = "colophon"
-    name = "Colophon"
-    url = "/colophon/"
-    weight= 4 
