--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,13 @@ variables:
 
 test:
   script:
-  - hugo
+  - /home/linuxbrew/.linuxbrew/bin/hugo
   except:
   - master
 
 pages:
   script:
-  - hugo
+  - /home/linuxbrew/.linuxbrew/bin/hugo
   artifacts:
     paths:
     - public
