first test for comments using talkyard

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,12 @@ languageCode = "en-us"
 title = "pagedjs, house of HTML printing" 
 theme = "pagedjs"
 # relativeURLs = true
+
+[params]
+talkyardServerUrl = "https://comments-for-pagedjs-org.talkyard.net"
+talkyardScriptUrl = "https://c1.ty-cdn.net/-/talkyard-comments.min.js"
+
+
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
