--- a/netlify.toml
+++ b/netlify.toml
@@ -28,3 +28,16 @@ HUGO_VERSION = "0.63.2"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
+
+# The following redirect is intended for use with most SPAs that handle
+# routing internally.
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
