--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git-gateway
+  name: gitlab
   branch: master # Branch to update (optional; defaults to master)
 # publish_mode: editorial_workflow
 media_folder: "static/uploads" # Media files will be stored in the repo under images/uploads
