--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,7 +14,7 @@ public_folder: "uploads/images/" # The src attribute for uploaded media will beg
 collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/blog
     label: "Journal" # Used in the UI
-    folder: "posts/" # The path to the folder where the documents are stored
+    folder: "content/posts/" # The path to the folder where the documents are stored
     create: true 
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" 
     fields:
