--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/budparr/gohugo-theme-ananke.git
+[submodule "themes/matomo"]
+	path = themes/matomo
+	url = https://github.com/holehan/hugo-components-matomo.git
+[submodule "themes/pagedjs"]
+	path = themes/pagedjs
+	url = https://gitlab.pagedmedia.org/julientaq/pagedjs-hugo.git
