--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/pagedjs"]
 	path = themes/pagedjs
 	url = https://gitlab.pagedmedia.org/julientaq/pagedjs-hugo.git
+[submodule "themes/hugo-search-fuse-js"]
+	path = themes/hugo-search-fuse-js
+	url = https://github.com/kaushalmodi/hugo-search-fuse-js
