--- a/config.toml
+++ b/config.toml
@@ -34,8 +34,8 @@ id = 17
   # category = "categories"
   tag = "tags"
 
-[permalinks]
-  # posts = "/:year/:month/:title/"
+# [permalinks]
+#   posts = "/:year/:month/:title/"
 
 [menu]
 
@@ -62,9 +62,3 @@ id = 17
     name = "search"
     url = "/search/"
     weight= 4
-  # [[menu.main]]
-  #   identifier = "cookbook"
-  #   name = "Cook book"
-  #   url = "/cookbook/"
-  #   weight= 3
-
